- added option to abbreviate columns in table

--- a/dists/debian/changelog
+++ b/dists/debian/changelog
@@ -1,3 +1,9 @@
+snapper (0.8.15) stable; urgency=low
+
+  * Updated to version 0.8.15
+
+ -- Arvin Schnell <aschnell@suse.com>  THu, 17 Dec 2020 10:22:04 +0000
+
 snapper (0.8.14) stable; urgency=low
 
   * Updated to version 0.8.14
