- update pot and po files

--- a/po/ca.po
+++ b/po/ca.po
@@ -2,17 +2,19 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-09-23 18:35+0200\n"
+"POT-Creation-Date: 2020-12-17 13:34+0100\n"
 "PO-Revision-Date: 2020-09-24 18:48+0000\n"
 "Last-Translator: David Medina <medipas@gmail.com>\n"
-"Language-Team: Catalan <https://l10n.opensuse.org/projects/snapper/master/ca/"
-">\n"
+"Language-Team: Catalan <https://l10n.opensuse.org/projects/snapper/master/ca/>\n"
 "Language: ca\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
 "X-Generator: Weblate 3.6.1\n"
+
+msgid "\t--abbreviate\t\t\tAllow to abbreviate table columns."
+msgstr ""
 
 msgid "\t--all-configs, -a\t\tList snapshots from all accessible configs."
 msgstr "\t--all-configs, -a\t\tLlista les instantànies des de totes les configuracions accessibles."
@@ -33,10 +35,8 @@ msgid ""
 "\t\t\t\t\tpre-number, post-number, post-date."
 msgstr ""
 "\t--columns <columnes>\t\tColumnes per mostrar separades per comes.\n"
-"\t\t\t\t\tColumnes possibles: configuració, subvolum, número, per defecte, "
-"activa,\n"
-"\t\t\t\t\ttipus, data, usuari, espai usat, neteja, descripció, dades "
-"d'usuari,\n"
+"\t\t\t\t\tColumnes possibles: configuració, subvolum, número, per defecte, activa,\n"
+"\t\t\t\t\ttipus, data, usuari, espai usat, neteja, descripció, dades d'usuari,\n"
 "\t\t\t\t\tnúmero pre, número post, data de post."
 
 msgid ""
