--- a/po/de.po
+++ b/po/de.po
@@ -6,17 +6,19 @@ msgid ""
 msgstr ""
 "Project-Id-Version: snapper\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-09-23 18:35+0200\n"
+"POT-Creation-Date: 2020-12-17 13:34+0100\n"
 "PO-Revision-Date: 2020-11-30 01:26+0000\n"
 "Last-Translator: Fabian Niepelt <fniepelt@takios.de>\n"
-"Language-Team: German <https://l10n.opensuse.org/projects/snapper/master/de/>"
-"\n"
+"Language-Team: German <https://l10n.opensuse.org/projects/snapper/master/de/>\n"
 "Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
 "X-Generator: Weblate 3.6.1\n"
+
+msgid "\t--abbreviate\t\t\tAllow to abbreviate table columns."
+msgstr ""
 
 msgid "\t--all-configs, -a\t\tList snapshots from all accessible configs."
 msgstr "\t--all-configs, -a\t\tSnapshots von allen verfügbaren Konfigurationen auflisten."
@@ -36,8 +38,7 @@ msgid ""
 "\t\t\t\t\ttype, date, user, used-space, cleanup, description, userdata,\n"
 "\t\t\t\t\tpre-number, post-number, post-date."
 msgstr ""
-"\t--columns <Spalten>\t\tSpalten, die angezeigt werden sollen. Separiert "
-"durch Kommata.\n"
+"\t--columns <Spalten>\t\tSpalten, die angezeigt werden sollen. Separiert durch Kommata.\n"
 "\t\t\t\t\tMögliche Spalten: config, subvolume, number, default, active,\n"
 "\t\t\t\t\ttype, date, user, used-space, cleanup, description, userdata,\n"
 "\t\t\t\t\tpre-number, post-number, post-date."
@@ -47,11 +48,9 @@ msgid ""
 "\t\t\t\t\tPossible columns: key, value.\n"
 "\t\t\t\t\tColumns are not selected when JSON format is used."
 msgstr ""
-"\t--columns <Spalten>\t\tSpalten, die angezeigt werden sollen. Separiert "
-"durch Kommata\n"
+"\t--columns <Spalten>\t\tSpalten, die angezeigt werden sollen. Separiert durch Kommata\n"
 "\t\t\t\t\tMögliche Spalten: key, value.\n"
-"\t\t\t\t\tSpalten werden nicht ausgewählt, wenn das JSON Format verwendet "
-"wird."
+"\t\t\t\t\tSpalten werden nicht ausgewählt, wenn das JSON Format verwendet wird."
 
 msgid "\t--command <command>\t\tRun command and create pre and post snapshots."
 msgstr "\t--command <Befehl>\t\tBefehl ausführen und Vorher- und Nachher-Schnappschuss erstellen."
@@ -78,9 +77,7 @@ msgid "\t--extensions, -x <options>\tExtra options passed to the diff command."
 msgstr "\t--extensions, -x <Optionen>\tExtra Optionen, die an den diff-Befehl übergeben wurden."
 
 msgid "\t--free-space <space>\t\tTry to make space available."
-msgstr ""
-"\t--free-space <Speicherplatz>\t\tVersuche, Speicherplatz verfügbar zu "
-"machen."
+msgstr "\t--free-space <Speicherplatz>\t\tVersuche, Speicherplatz verfügbar zu machen."
 
 msgid "\t--from\t\t\t\tCreate a snapshot from the specified snapshot."
 msgstr "\t--from\t\t\t\tEinen Schnappschuss von dem speziellen Schnappschuss erstellen."
@@ -110,9 +107,7 @@ msgid "\t--output, -o <file>\t\tSave status to file."
 msgstr "\t--output, -o <Datei>\t\tStatus in <Datei> speichern."
 
 msgid "\t--path <path>\t\t\tCleanup all configs affecting path."
-msgstr ""
-"\t--path <Pfad>\t\t\tRäume alle Konfigurationen auf, die diesen Pfad "
-"betreffen."
+msgstr "\t--path <Pfad>\t\t\tRäume alle Konfigurationen auf, die diesen Pfad betreffen."
 
 msgid "\t--pre-number <number>\t\tNumber of corresponding pre snapshot."
 msgstr "\t--pre-number <Nummer>\t\tNummer des zugehörigen Vorher-Schnappschusses."
@@ -252,8 +247,7 @@ msgid ""
 "\t\t\t\t\tPossible columns: config, subvolume.\n"
 msgstr ""
 "    Optionen für den Befehl 'list-configs':\n"
-"\t--columns <Spalten>\t\tSpalten, die angezeigt werden sollen. Separiert "
-"durch Kommata\n"
+"\t--columns <Spalten>\t\tSpalten, die angezeigt werden sollen. Separiert durch Kommata\n"
 "\t\t\t\t\tMögliche Spalten: config, subvolume.\n"
 
 msgid "    Options for 'modify' command:"
