--- a/po/it.po
+++ b/po/it.po
@@ -3,17 +3,19 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-09-23 18:35+0200\n"
+"POT-Creation-Date: 2020-12-17 13:34+0100\n"
 "PO-Revision-Date: 2020-10-01 09:48+0000\n"
 "Last-Translator: Paolo Za <zapaolo@email.it>\n"
-"Language-Team: Italian <https://l10n.opensuse.org/projects/snapper/master/it/"
-">\n"
+"Language-Team: Italian <https://l10n.opensuse.org/projects/snapper/master/it/>\n"
 "Language: it\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
 "X-Generator: Weblate 3.6.1\n"
+
+msgid "\t--abbreviate\t\t\tAllow to abbreviate table columns."
+msgstr ""
 
 msgid "\t--all-configs, -a\t\tList snapshots from all accessible configs."
 msgstr "\t--all-configs, -a\t\tElenca gli shapshot da tutte le configurazioni accessibili."
@@ -45,8 +47,7 @@ msgid ""
 msgstr ""
 "\t--columns <columns>\t\tColonne da mostrare separate da virgola.\n"
 "\t\t\t\t\tPossibili colonne: key, value.\n"
-"\t\t\t\t\tLe colonne non vengono selezionate quando viene utilizzato il "
-"formato JSON."
+"\t\t\t\t\tLe colonne non vengono selezionate quando viene utilizzato il formato JSON."
 
 msgid "\t--command <command>\t\tRun command and create pre and post snapshots."
 msgstr "\t--command <comando>\t\tLancia il comando e crea istantanee pre e post."
@@ -103,9 +104,7 @@ msgid "\t--output, -o <file>\t\tSave status to file."
 msgstr "\t--output, -o <file>\t\tSalva lo stato sul file."
 
 msgid "\t--path <path>\t\t\tCleanup all configs affecting path."
-msgstr ""
-"\t--path <path>\t\t\tPulisci tutte le configurazioni che interessano il "
-"percorso."
+msgstr "\t--path <path>\t\t\tPulisci tutte le configurazioni che interessano il percorso."
 
 msgid "\t--pre-number <number>\t\tNumber of corresponding pre snapshot."
 msgstr "\t--pre-number <numero>\t\tNumero della pre-istantanea corrispondente."
@@ -465,8 +464,7 @@ msgstr "Il dato di configurazione '%s' ha la chiave vuota."
 
 #, c-format
 msgid "Could not make enough free space available for path '%s'."
-msgstr ""
-"Impossibile creare abbastanza spazio libero disponibile per il percorso '%s'."
+msgstr "Impossibile creare abbastanza spazio libero disponibile per il percorso '%s'."
 
 msgid "Could not make enough free space available."
 msgstr "Impossibile creare abbastanza spazio libero disponibile."
@@ -868,8 +866,7 @@ msgid "nothing to do"
 msgstr "nessuna operazione da eseguire"
 
 msgid "root argument can be used only together with no-dbus.\n"
-msgstr ""
-"l'argomento principale può essere utilizzato solo unitamente a no-dbus.\n"
+msgstr "l'argomento principale può essere utilizzato solo unitamente a no-dbus.\n"
 
 msgid "usage: snapper [--global-options] <command> [--command-options] [command-arguments]"
 msgstr ""
