--- a/po/nl.po
+++ b/po/nl.po
@@ -9,17 +9,19 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-09-23 18:35+0200\n"
+"POT-Creation-Date: 2020-12-17 13:34+0100\n"
 "PO-Revision-Date: 2020-09-24 00:48+0000\n"
 "Last-Translator: Freek de Kruijf <freek@opensuse.org>\n"
-"Language-Team: Dutch <https://l10n.opensuse.org/projects/snapper/master/nl/>"
-"\n"
+"Language-Team: Dutch <https://l10n.opensuse.org/projects/snapper/master/nl/>\n"
 "Language: nl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
 "X-Generator: Weblate 3.6.1\n"
+
+msgid "\t--abbreviate\t\t\tAllow to abbreviate table columns."
+msgstr ""
 
 msgid "\t--all-configs, -a\t\tList snapshots from all accessible configs."
 msgstr "\t--all-configs, -a\t\tMomentopnamen weergeven van alle beschikbare configuraties."
@@ -51,8 +53,7 @@ msgid ""
 msgstr ""
 "\t--columns <columns>\t\tTe tonen kolommen gescheiden door een komma.\n"
 "\t\t\t\t\tMogelijke kolommen: key, value.\n"
-"\t\t\t\t\tKolommen worden niet geselecteerd wanneer JSON-formaat wordt "
-"gebruikt."
+"\t\t\t\t\tKolommen worden niet geselecteerd wanneer JSON-formaat wordt gebruikt."
 
 msgid "\t--command <command>\t\tRun command and create pre and post snapshots."
 msgstr "\t--command <command>\t\tVoer opdracht uit en maak pre- en post-momentopnamen."
