--- a/po/fr.po
+++ b/po/fr.po
@@ -3,11 +3,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-09-23 18:35+0200\n"
+"POT-Creation-Date: 2020-12-17 13:34+0100\n"
 "PO-Revision-Date: 2020-09-30 12:48+0000\n"
 "Last-Translator: Antoine Belvire <antoine.belvire@opensuse.org>\n"
-"Language-Team: French <https://l10n.opensuse.org/projects/snapper/master/fr/>"
-"\n"
+"Language-Team: French <https://l10n.opensuse.org/projects/snapper/master/fr/>\n"
 "Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -15,6 +14,9 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=n > 1;\n"
 "X-Generator: Weblate 3.6.1\n"
 "X-Poedit-Language: French\n"
+
+msgid "\t--abbreviate\t\t\tAllow to abbreviate table columns."
+msgstr ""
 
 msgid "\t--all-configs, -a\t\tList snapshots from all accessible configs."
 msgstr "\t--all-configs, -a\t\tRépertorie les instantanés de toutes les configurations accessibles."
@@ -47,8 +49,7 @@ msgid ""
 msgstr ""
 "\t--columns <colonnes>\t\tColonnes à afficher séparées par une virgule.\n"
 "\t\t\t\t\tColonnes possibles : key, value.\n"
-"\t\t\t\t\tLes colonnes ne sont pas sélectionnées quand le format JSON est "
-"utilisé."
+"\t\t\t\t\tLes colonnes ne sont pas sélectionnées quand le format JSON est utilisé."
 
 msgid "\t--command <command>\t\tRun command and create pre and post snapshots."
 msgstr "\t--command <commande>\t\tLance la commande et crée les instantanés pre et post."
@@ -107,8 +108,7 @@ msgid "\t--output, -o <file>\t\tSave status to file."
 msgstr "\t--output, -o <fichier>\t\tSauvegarde les statuts vers le fichier."
 
 msgid "\t--path <path>\t\t\tCleanup all configs affecting path."
-msgstr ""
-"\t--path <chemin>\t\t\tNettoie toutes les configurations affectant le chemin."
+msgstr "\t--path <chemin>\t\t\tNettoie toutes les configurations affectant le chemin."
 
 msgid "\t--pre-number <number>\t\tNumber of corresponding pre snapshot."
 msgstr "\t--pre-number <numéro>\t\tNuméro d'instantané pre correspondant."
@@ -373,13 +373,10 @@ msgid "Cannot delete snapshot %d since it is the next to be mounted snapshot."
 msgstr "Impossible de supprimer l'instantané %d puisqu'il s'agit du prochain instantané à monter."
 
 msgid "Cannot detect ambit since default subvolume is unknown."
-msgstr ""
-"Impossible de détecter le contexte car le sous-volume par défaut est inconnu."
+msgstr "Impossible de détecter le contexte car le sous-volume par défaut est inconnu."
 
 msgid "Cannot do rollback since default subvolume is unknown."
-msgstr ""
-"Impossible de revenir à l'état initial car le sous-volume par défaut est "
-"inconnu."
+msgstr "Impossible de revenir à l'état initial car le sous-volume par défaut est inconnu."
 
 msgid "Cleanup"
 msgstr "Nettoyer"
@@ -785,8 +782,7 @@ msgid "TB"
 msgstr "To"
 
 msgid "The ambit can be specified manually using the --ambit option."
-msgstr ""
-"Le contexte peut être spécifié manuellement en utilisant l'option --ambit."
+msgstr "Le contexte peut être spécifié manuellement en utilisant l'option --ambit."
 
 msgid "The config 'root' does not exist. Likely snapper is not configured."
 msgstr "La configuration 'root' n'existe pas. Snapper n'est probablement pas configuré."
@@ -907,8 +903,7 @@ msgid "nothing to do"
 msgstr "Rien à faire"
 
 msgid "root argument can be used only together with no-dbus.\n"
-msgstr ""
-"L'argument root peut uniquement être utilisé en association avec no-dbus.\n"
+msgstr "L'argument root peut uniquement être utilisé en association avec no-dbus.\n"
 
 msgid "usage: snapper [--global-options] <command> [--command-options] [command-arguments]"
 msgstr "Utilisation : snapper [--options-globales] <commande> [--options-de-commande] [arguments-de-commande]"
