--- a/po/km.po
+++ b/po/km.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: snapper.km\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-12-17 13:34+0100\n"
+"POT-Creation-Date: 2022-03-23 12:54+0100\n"
 "PO-Revision-Date: 2011-10-24 10:40+0700\n"
 "Last-Translator: Khoem Sokhem <khoemsokhem@khmeros.info>\n"
 "Language-Team: Khmer <support@khmeros.info>\n"
@@ -581,8 +581,9 @@ msgstr ""
 msgid "Failed to query free space."
 msgstr "បាន​បរាជ័យ​ក្នុង​ការ​បង្កើត %s"
 
-msgid "Failed to set locale. Fix your system."
-msgstr ""
+#, fuzzy
+msgid "Failed to set locale."
+msgstr "បាន​បរាជ័យ​ក្នុង​ការ​បង្កើត %s"
 
 msgid "Failure"
 msgstr "​បរាជ័យ"
