--- a/po/de.po
+++ b/po/de.po
@@ -6,11 +6,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: snapper\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-12-17 13:34+0100\n"
+"POT-Creation-Date: 2022-03-23 12:54+0100\n"
 "PO-Revision-Date: 2021-03-29 16:37+0000\n"
 "Last-Translator: Bernd Ritter <comrad@posteo.de>\n"
-"Language-Team: German <https://l10n.opensuse.org/projects/snapper/master/de/>"
-"\n"
+"Language-Team: German <https://l10n.opensuse.org/projects/snapper/master/de/>\n"
 "Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -354,30 +353,21 @@ msgstr "B"
 
 #, c-format
 msgid "Cannot delete snapshot %d since it is the current system."
-msgstr ""
-"Schnappschuss %d kann nicht gelöscht werden, weil es das derzeitige System "
-"ist."
+msgstr "Schnappschuss %d kann nicht gelöscht werden, weil es das derzeitige System ist."
 
 #, c-format
 msgid "Cannot delete snapshot %d since it is the currently mounted snapshot."
-msgstr ""
-"Schnappschuss %d kann nicht gelöscht werden, weil es der derzeit gemountete "
-"Schnappschuss ist."
+msgstr "Schnappschuss %d kann nicht gelöscht werden, weil es der derzeit gemountete Schnappschuss ist."
 
 #, c-format
 msgid "Cannot delete snapshot %d since it is the next to be mounted snapshot."
-msgstr ""
-"Schnappschuss %d kann nicht gelöscht werden, weil es der nächste zu "
-"mountende Schnappschuss ist."
+msgstr "Schnappschuss %d kann nicht gelöscht werden, weil es der nächste zu mountende Schnappschuss ist."
 
 msgid "Cannot detect ambit since default subvolume is unknown."
-msgstr ""
-"Anwendungsbereich kann nicht erkannt werden, weil das Standard-Subvolume "
-"unbekannt ist."
+msgstr "Anwendungsbereich kann nicht erkannt werden, weil das Standard-Subvolume unbekannt ist."
 
 msgid "Cannot do rollback since default subvolume is unknown."
-msgstr ""
-"Kann kein Rollback durchführen, weil das Standard-Subvolume unbekannt ist."
+msgstr "Kann kein Rollback durchführen, weil das Standard-Subvolume unbekannt ist."
 
 msgid "Cleanup"
 msgstr "Bereinigen"
@@ -562,7 +552,8 @@ msgstr "Freier Speicher für '%s' kann nicht ermittelt werden."
 msgid "Failed to query free space."
 msgstr "Kann freien Speicher nicht ermitteln."
 
-msgid "Failed to set locale. Fix your system."
+#, fuzzy
+msgid "Failed to set locale."
 msgstr "Das Setzen den Locale ist fehlgeschlagen. Beheben Sie die Systemprobleme."
 
 msgid "Failure"
