--- a/po/es.po
+++ b/po/es.po
@@ -3,11 +3,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: snapper\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-12-17 13:34+0100\n"
+"POT-Creation-Date: 2022-03-23 12:54+0100\n"
 "PO-Revision-Date: 2022-02-22 13:12+0000\n"
 "Last-Translator: Antonio Simón <antonio@trans-mission.com>\n"
-"Language-Team: Spanish <https://l10n.opensuse.org/projects/snapper/master/es/"
-">\n"
+"Language-Team: Spanish <https://l10n.opensuse.org/projects/snapper/master/es/>\n"
 "Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -99,9 +98,7 @@ msgid "\t--jsonout\t\t\tSet JSON output format."
 msgstr "\t--jsonout\t\t\tEstablecer el formato de salida como JSON."
 
 msgid "\t--machine-readable <format>\tSet a machine-readable output format (csv, json)."
-msgstr ""
-"\t--machine-readable <formato>\tDefine un formato de salida que puede leer "
-"el equipo (csv, json)."
+msgstr "\t--machine-readable <formato>\tDefine un formato de salida que puede leer el equipo (csv, json)."
 
 msgid "\t--no-dbus\t\t\tOperate without DBus."
 msgstr "\t--no-dbus\t\t\tTrabajar sin DBus."
@@ -110,8 +107,7 @@ msgid "\t--output, -o <file>\t\tSave status to file."
 msgstr "\t--output, -o <file>\t\tGuardar estado a archivo."
 
 msgid "\t--path <path>\t\t\tCleanup all configs affecting path."
-msgstr ""
-"\t--path <vía>\t\t\tLimpia todas las configuraciones que afectan a la vía."
+msgstr "\t--path <vía>\t\t\tLimpia todas las configuraciones que afectan a la vía."
 
 msgid "\t--pre-number <number>\t\tNumber of corresponding pre snapshot."
 msgstr "\t--pre-number <number>\t\tNúmero de pre imagen correspondiente."
@@ -136,9 +132,7 @@ msgid "\t--root, -r <path>\t\tOperate on target root (works only without DBus)."
 msgstr "\t--root, -r <vía>\t\tFunciona en la raíz del destino (solo funciona sin DBus)."
 
 msgid "\t--separator <separator>\t\tCharacter separator for CSV output format."
-msgstr ""
-"\t--separator <separador>\t\tSeparador de caracteres para el formato de "
-"salida CSV."
+msgstr "\t--separator <separador>\t\tSeparador de caracteres para el formato de salida CSV."
 
 msgid "\t--sync, -s\t\t\tSync after deletion."
 msgstr "\t--sync, -s\t\t\tRealiza una sincronización después de suprimir."
@@ -257,8 +251,7 @@ msgid ""
 "\t\t\t\t\tPossible columns: config, subvolume.\n"
 msgstr ""
 "    Opciones para el comando 'list-configs':\n"
-"\t--columns <columnas>\t\tLas columnas que se van a mostrar, separadas por "
-"coma.\n"
+"\t--columns <columnas>\t\tLas columnas que se van a mostrar, separadas por coma.\n"
 "\t\t\t\t\tColumnas posibles: config, subvolumen.\n"
 
 msgid "    Options for 'modify' command:"
@@ -378,8 +371,7 @@ msgid "Cannot delete snapshot %d since it is the next to be mounted snapshot."
 msgstr "No se puede borrar la imagen %d porque es la siguiente imagen que se va a montar."
 
 msgid "Cannot detect ambit since default subvolume is unknown."
-msgstr ""
-"No se puede detectar el ámbito porque no se conoce el subvolumen por defecto."
+msgstr "No se puede detectar el ámbito porque no se conoce el subvolumen por defecto."
 
 msgid "Cannot do rollback since default subvolume is unknown."
 msgstr "No se puede revertir porque no se conoce el subvolumen por defecto."
@@ -586,7 +578,8 @@ msgstr "Error al consultar el espacio disponible para la vía \"%s\"."
 msgid "Failed to query free space."
 msgstr "Error al consultar el espacio libre."
 
-msgid "Failed to set locale. Fix your system."
+#, fuzzy
+msgid "Failed to set locale."
 msgstr "Error al establecer la configuración regional. Repare su sistema."
 
 msgid "Failure"
@@ -799,8 +792,7 @@ msgid "The config 'root' does not exist. Likely snapper is not configured."
 msgstr "La raíz de configuración no existe. Es probable que snapper no se haya configurado."
 
 msgid "This can happen if the system was not set up for rollback."
-msgstr ""
-"Esto puede suceder si el sistema no se ha configurado para la reversión."
+msgstr "Esto puede suceder si el sistema no se ha configurado para la reversión."
 
 #. TRANSLATORS: symbol for "tebi bytes" (best keep untranslated)
 msgid "TiB"
