--- a/po/fi.po
+++ b/po/fi.po
@@ -5,11 +5,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-12-17 13:34+0100\n"
+"POT-Creation-Date: 2022-03-23 12:54+0100\n"
 "PO-Revision-Date: 2021-02-09 00:17+0000\n"
 "Last-Translator: Tommi Nieminen <software@legisign.org>\n"
-"Language-Team: Finnish <https://l10n.opensuse.org/projects/snapper/master/fi/"
-">\n"
+"Language-Team: Finnish <https://l10n.opensuse.org/projects/snapper/master/fi/>\n"
 "Language: fi\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -107,8 +106,7 @@ msgid "\t--output, -o <file>\t\tSave status to file."
 msgstr "\t--output, -o <tiedosto>\t\tTallenna tilatieto tiedostoon."
 
 msgid "\t--path <path>\t\t\tCleanup all configs affecting path."
-msgstr ""
-"\t--path <sijainti>\t\t\tSiivoa kaikki sijaintiin vaikuttavat määritykset."
+msgstr "\t--path <sijainti>\t\t\tSiivoa kaikki sijaintiin vaikuttavat määritykset."
 
 msgid "\t--pre-number <number>\t\tNumber of corresponding pre snapshot."
 msgstr "\t--pre-number <numero>\t\tVastaavan ennen-tilannevedoksen numero."
@@ -555,7 +553,8 @@ msgstr "Vapaan tilan kysely sijainnista ”%s” epäonnistui."
 msgid "Failed to query free space."
 msgstr "Vapaan tilan kysely epäonnistui."
 
-msgid "Failed to set locale. Fix your system."
+#, fuzzy
+msgid "Failed to set locale."
 msgstr "Maa-asetuksen asettaminen epäonnistui. Korjaa järjestelmä."
 
 msgid "Failure"
@@ -875,8 +874,7 @@ msgid "nothing to do"
 msgstr "ei mitään tehtävää"
 
 msgid "root argument can be used only together with no-dbus.\n"
-msgstr ""
-"root parametria voidaan käyttää vain yhdessä no-dbus-valitsimen kanssa.\n"
+msgstr "root parametria voidaan käyttää vain yhdessä no-dbus-valitsimen kanssa.\n"
 
 msgid "usage: snapper [--global-options] <command> [--command-options] [command-arguments]"
 msgstr "käyttö: snapper [--yleisvalitsimet] <komento> [--komennon-valitsimet] [komennon-parametrit]"
