--- a/po/fr.po
+++ b/po/fr.po
@@ -3,11 +3,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-12-17 13:34+0100\n"
+"POT-Creation-Date: 2022-03-23 12:54+0100\n"
 "PO-Revision-Date: 2021-02-09 00:17+0000\n"
 "Last-Translator: Antoine Belvire <antoine.belvire@opensuse.org>\n"
-"Language-Team: French <https://l10n.opensuse.org/projects/snapper/master/fr/>"
-"\n"
+"Language-Team: French <https://l10n.opensuse.org/projects/snapper/master/fr/>\n"
 "Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -577,7 +576,8 @@ msgstr "Impossible de récupérer l'espace libre pour le chemin « %s »."
 msgid "Failed to query free space."
 msgstr "Impossible de récupérer l'espace libre."
 
-msgid "Failed to set locale. Fix your system."
+#, fuzzy
+msgid "Failed to set locale."
 msgstr "Échec de la définition des paramètres régionaux. Corrigez votre système."
 
 msgid "Failure"
@@ -789,9 +789,7 @@ msgid "The config 'root' does not exist. Likely snapper is not configured."
 msgstr "La configuration 'root' n'existe pas. Snapper n'est probablement pas configuré."
 
 msgid "This can happen if the system was not set up for rollback."
-msgstr ""
-"Cela peut arriver si le système n'a pas été configuré pour le retour à "
-"l'état initial."
+msgstr "Cela peut arriver si le système n'a pas été configuré pour le retour à l'état initial."
 
 #. TRANSLATORS: symbol for "tebi bytes" (best keep untranslated)
 msgid "TiB"
