--- a/po/id.po
+++ b/po/id.po
@@ -2,11 +2,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-12-17 13:34+0100\n"
+"POT-Creation-Date: 2022-03-23 12:54+0100\n"
 "PO-Revision-Date: 2020-12-21 14:26+0000\n"
 "Last-Translator: Kukuh Syafaat <syafaatkukuh@gmail.com>\n"
-"Language-Team: Indonesian <https://l10n.opensuse.org/projects/snapper/master/"
-"id/>\n"
+"Language-Team: Indonesian <https://l10n.opensuse.org/projects/snapper/master/id/>\n"
 "Language: id\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -37,8 +36,7 @@ msgid ""
 msgstr ""
 "\t--columns <columns>\t\tKolom untuk ditampilkan dipisahkan oleh koma.\n"
 "\t\t\t\t\tKolom yang mungkin: konfigurasi, subvolume, angka, bawaan, aktif,\n"
-"\t\t\t\t\tipe, tanggal, pengguna, ruang bekas, pembersihan, deskripsi, "
-"userdata,\n"
+"\t\t\t\t\tipe, tanggal, pengguna, ruang bekas, pembersihan, deskripsi, userdata,\n"
 "\t\t\t\t\tpra-angka, pasca-angka, pasca-tanggal."
 
 msgid ""
@@ -549,7 +547,8 @@ msgstr "Gagal meminta ruang bebas untuk path '%s'."
 msgid "Failed to query free space."
 msgstr "Gagal mengkueri ruang bebas."
 
-msgid "Failed to set locale. Fix your system."
+#, fuzzy
+msgid "Failed to set locale."
 msgstr "Gagal menyetel locale. Perbaiki sistem Anda."
 
 msgid "Failure"
