--- a/po/it.po
+++ b/po/it.po
@@ -3,11 +3,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-12-17 13:34+0100\n"
+"POT-Creation-Date: 2022-03-23 12:54+0100\n"
 "PO-Revision-Date: 2021-06-08 16:00+0000\n"
 "Last-Translator: Paolo Za <zapaolo@email.it>\n"
-"Language-Team: Italian <https://l10n.opensuse.org/projects/snapper/master/it/"
-">\n"
+"Language-Team: Italian <https://l10n.opensuse.org/projects/snapper/master/it/>\n"
 "Language: it\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -551,7 +550,8 @@ msgstr "Impossibile interrogare lo spazio libero per il percorso '%s'."
 msgid "Failed to query free space."
 msgstr "Impossibile interrogare lo spazio libero."
 
-msgid "Failed to set locale. Fix your system."
+#, fuzzy
+msgid "Failed to set locale."
 msgstr "Impossibile impostare la localizzazione. Correggere il sistema."
 
 msgid "Failure"
@@ -870,9 +870,7 @@ msgid "root argument can be used only together with no-dbus.\n"
 msgstr "l'argomento principale può essere utilizzato solo unitamente a no-dbus.\n"
 
 msgid "usage: snapper [--global-options] <command> [--command-options] [command-arguments]"
-msgstr ""
-"uso: snapper [--opzioni-globali] <comando> [--opzioni-del-comando] "
-"[argomenti-del-comando]"
+msgstr "uso: snapper [--opzioni-globali] <comando> [--opzioni-del-comando] [argomenti-del-comando]"
 
 msgid "yes"
 msgstr "sì"
