--- a/po/nds.po
+++ b/po/nds.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: opensuse-i 18n\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-12-17 13:34+0100\n"
+"POT-Creation-Date: 2022-03-23 12:54+0100\n"
 "PO-Revision-Date: 2012-11-26 14:24+0100\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -544,7 +544,7 @@ msgstr ""
 msgid "Failed to query free space."
 msgstr ""
 
-msgid "Failed to set locale. Fix your system."
+msgid "Failed to set locale."
 msgstr ""
 
 msgid "Failure"
