--- a/po/nn.po
+++ b/po/nn.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-12-17 13:34+0100\n"
+"POT-Creation-Date: 2022-03-23 12:54+0100\n"
 "PO-Revision-Date: 2005-08-11 20:37+0200\n"
 "Last-Translator: nynorsk <i18n@suse.de>\n"
 "Language-Team:  nn <i18n@suse.de>\n"
@@ -544,7 +544,7 @@ msgstr ""
 msgid "Failed to query free space."
 msgstr ""
 
-msgid "Failed to set locale. Fix your system."
+msgid "Failed to set locale."
 msgstr ""
 
 msgid "Failure"
