--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -8,11 +8,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-12-17 13:34+0100\n"
+"POT-Creation-Date: 2022-03-23 12:54+0100\n"
 "PO-Revision-Date: 2021-05-14 15:59+0000\n"
 "Last-Translator: Luiz Fernando Ranghetti <elchevive68@gmail.com>\n"
-"Language-Team: Portuguese (Brazil) <https://l10n.opensuse.org/projects/"
-"snapper/master/pt_BR/>\n"
+"Language-Team: Portuguese (Brazil) <https://l10n.opensuse.org/projects/snapper/master/pt_BR/>\n"
 "Language: pt_BR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -555,7 +554,8 @@ msgstr "Falhou ao consultar o espaço livre para o caminho '%s'."
 msgid "Failed to query free space."
 msgstr "Falhou ao consultar o espaço livre."
 
-msgid "Failed to set locale. Fix your system."
+#, fuzzy
+msgid "Failed to set locale."
 msgstr "Falha ao configurar o idioma. Repare seu sistema."
 
 msgid "Failure"
