--- a/po/ru.po
+++ b/po/ru.po
@@ -3,17 +3,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-12-17 13:34+0100\n"
+"POT-Creation-Date: 2022-03-23 12:54+0100\n"
 "PO-Revision-Date: 2021-05-12 23:58+0000\n"
 "Last-Translator: Alex Minton <alex239@gmail.com>\n"
-"Language-Team: Russian <https://l10n.opensuse.org/projects/snapper/master/ru/"
-">\n"
+"Language-Team: Russian <https://l10n.opensuse.org/projects/snapper/master/ru/>\n"
 "Language: ru\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
-"%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
+"Plural-Forms: nplurals=3; plural=n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 "X-Generator: Weblate 4.6.2\n"
 
 msgid "\t--abbreviate\t\t\tAllow to abbreviate table columns."
@@ -97,9 +95,7 @@ msgid "\t--jsonout\t\t\tSet JSON output format."
 msgstr "\t--jsonout\t\t\tЗадать формат вывода JSON."
 
 msgid "\t--machine-readable <format>\tSet a machine-readable output format (csv, json)."
-msgstr ""
-"\t--machine-readable <формат>\tЗадать машиночитаемый формат вывода (csv, "
-"json)."
+msgstr "\t--machine-readable <формат>\tЗадать машиночитаемый формат вывода (csv, json)."
 
 msgid "\t--no-dbus\t\t\tOperate without DBus."
 msgstr "\t--no-dbus\t\t\tРаботать без DBus."
@@ -132,8 +128,7 @@ msgid "\t--root, -r <path>\t\tOperate on target root (works only without DBus)."
 msgstr "\t--root, -r <path>\t\tРабота с целевым корнем (поддерживается только без DBus)."
 
 msgid "\t--separator <separator>\t\tCharacter separator for CSV output format."
-msgstr ""
-"\t--separator <разделитель>\t\tСимвол-разделитель для формата вывода CSV."
+msgstr "\t--separator <разделитель>\t\tСимвол-разделитель для формата вывода CSV."
 
 msgid "\t--sync, -s\t\t\tSync after deletion."
 msgstr "\t--sync, -s\t\t\tСинхронизация после удаления."
@@ -556,7 +551,8 @@ msgstr "Сбой при запросе свободного места для п
 msgid "Failed to query free space."
 msgstr "Сбой при запросе свободного места."
 
-msgid "Failed to set locale. Fix your system."
+#, fuzzy
+msgid "Failed to set locale."
 msgstr "Сбой определения локали. Исправьте системные настройки."
 
 msgid "Failure"
