--- a/po/tr.po
+++ b/po/tr.po
@@ -8,11 +8,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-12-17 13:34+0100\n"
+"POT-Creation-Date: 2022-03-23 12:54+0100\n"
 "PO-Revision-Date: 2022-02-10 15:12+0000\n"
 "Last-Translator: Murat Servan Kahraman <muratservan@outlook.com>\n"
-"Language-Team: Turkish <https://l10n.opensuse.org/projects/snapper/master/tr/"
-">\n"
+"Language-Team: Turkish <https://l10n.opensuse.org/projects/snapper/master/tr/>\n"
 "Language: tr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -622,8 +621,9 @@ msgstr ""
 msgid "Failed to query free space."
 msgstr "%s oluşturma başarısız oldu"
 
-msgid "Failed to set locale. Fix your system."
-msgstr ""
+#, fuzzy
+msgid "Failed to set locale."
+msgstr "%s oluşturma başarısız oldu"
 
 msgid "Failure"
 msgstr ""
@@ -893,7 +893,7 @@ msgstr "'Bilinmeyen komut '%s'."
 msgid "Use %1$s."
 msgstr ""
 
-#, c-format, fuzzy
+#, fuzzy, c-format
 msgid "Use an integer number from %d to %d."
 msgstr "%d ve %d aralığında bir tamsayı kullanın."
 
