--- a/dists/debian/changelog
+++ b/dists/debian/changelog
@@ -1,3 +1,9 @@
+snapper (0.10.2) stable; urgency=low
+
+  * Updated to version 0.10.2
+
+ -- Arvin Schnell <aschnell@suse.com>  Fri,  6 May 2022 08:08:57 +0000
+
 snapper (0.10.1) stable; urgency=low
 
   * Updated to version 0.10.1
