--- a/dists/debian/changelog
+++ b/dists/debian/changelog
@@ -1,3 +1,9 @@
+snapper (0.10.3) stable; urgency=low
+
+  * Updated to version 0.10.3
+
+ -- Arvin Schnell <aschnell@suse.com>  Wed, 21 Sep 2022 11:59:53 +0000
+
 snapper (0.10.2) stable; urgency=low
 
   * Updated to version 0.10.2
