--- a/po/cs.po
+++ b/po/cs.po
@@ -3,11 +3,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-03-23 12:54+0100\n"
+"POT-Creation-Date: 2023-02-08 08:09+0100\n"
 "PO-Revision-Date: 2022-04-06 23:12+0000\n"
 "Last-Translator: Jan Papež <honyczek@centrum.cz>\n"
-"Language-Team: Czech <https://l10n.opensuse.org/projects/snapper/master/cs/>"
-"\n"
+"Language-Team: Czech <https://l10n.opensuse.org/projects/snapper/master/cs/>\n"
 "Language: cs\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -79,7 +78,8 @@ msgstr "\t--extensions, -x <možnosti>\tJedná se o další možnosti předané 
 msgid "\t--free-space <space>\t\tTry to make space available."
 msgstr "\t--free-space <prostor>\t\tZkusí zpřístupnit prostor."
 
-msgid "\t--from\t\t\t\tCreate a snapshot from the specified snapshot."
+#, fuzzy
+msgid "\t--from <number>\t\t\tCreate a snapshot from the specified snapshot."
 msgstr "\t--from\t\t\t\tVytvoří snímek ze zadaného snímku."
 
 msgid "\t--fstype, -f <fstype>\t\tManually set filesystem type."
@@ -103,6 +103,10 @@ msgstr "\t--machine-readable <formát>\tNastaví strojově čitelný výstupní 
 
 msgid "\t--no-dbus\t\t\tOperate without DBus."
 msgstr "\t--no-dbus\t\t\tPracovat bez DBusu."
+
+#, fuzzy
+msgid "\t--no-headers\t\t\tNo headers for CSV output format."
+msgstr "\t--csvout\t\t\tNastaví výstupní formát CSV."
 
 msgid "\t--output, -o <file>\t\tSave status to file."
 msgstr "\t--output, -o <soubor>\t\tUloží stav do souboru."
@@ -899,8 +903,7 @@ msgid "root argument can be used only together with no-dbus.\n"
 msgstr "Argument root lze použít pouze společně s argumentem no-dbus.\n"
 
 msgid "usage: snapper [--global-options] <command> [--command-options] [command-arguments]"
-msgstr ""
-"Použití: snapper [--obecné-volby] <příkaz> [--volby-příkazu] [argumenty]"
+msgstr "Použití: snapper [--obecné-volby] <příkaz> [--volby-příkazu] [argumenty]"
 
 msgid "yes"
 msgstr "ano"
