--- a/po/de.po
+++ b/po/de.po
@@ -6,11 +6,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: snapper\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-03-23 12:54+0100\n"
+"POT-Creation-Date: 2023-02-08 08:09+0100\n"
 "PO-Revision-Date: 2022-09-10 18:13+0000\n"
 "Last-Translator: Ettore Atalan <atalanttore@googlemail.com>\n"
-"Language-Team: German <https://l10n.opensuse.org/projects/snapper/master/de/>"
-"\n"
+"Language-Team: German <https://l10n.opensuse.org/projects/snapper/master/de/>\n"
 "Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -80,7 +79,8 @@ msgstr "\t--extensions, -x <Optionen>\tExtra Optionen, die an den diff-Befehl ü
 msgid "\t--free-space <space>\t\tTry to make space available."
 msgstr "\t--free-space <Speicherplatz>\t\tVersuche, Speicherplatz verfügbar zu machen."
 
-msgid "\t--from\t\t\t\tCreate a snapshot from the specified snapshot."
+#, fuzzy
+msgid "\t--from <number>\t\t\tCreate a snapshot from the specified snapshot."
 msgstr "\t--from\t\t\t\tEinen Schnappschuss von dem speziellen Schnappschuss erstellen."
 
 msgid "\t--fstype, -f <fstype>\t\tManually set filesystem type."
@@ -103,6 +103,10 @@ msgstr "\t--machine-readable <Format>\tEin Maschinen-lesbares Ausgabeformat (csv
 
 msgid "\t--no-dbus\t\t\tOperate without DBus."
 msgstr "\t--no-dbus\t\t\tOhne DBus arbeiten."
+
+#, fuzzy
+msgid "\t--no-headers\t\t\tNo headers for CSV output format."
+msgstr "\t--csvout\t\t\tCSV-Ausgabeformat setzen."
 
 msgid "\t--output, -o <file>\t\tSave status to file."
 msgstr "\t--output, -o <Datei>\t\tStatus in <Datei> speichern."
