--- a/po/fi.po
+++ b/po/fi.po
@@ -5,11 +5,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-03-23 12:54+0100\n"
+"POT-Creation-Date: 2023-02-08 08:09+0100\n"
 "PO-Revision-Date: 2022-04-03 22:12+0000\n"
 "Last-Translator: Tommi Nieminen <software@legisign.org>\n"
-"Language-Team: Finnish <https://l10n.opensuse.org/projects/snapper/master/fi/"
-">\n"
+"Language-Team: Finnish <https://l10n.opensuse.org/projects/snapper/master/fi/>\n"
 "Language: fi\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -79,7 +78,8 @@ msgstr "\t--extensions, -x <valinnat>\tdiff-komennolle välitettävät lisävali
 msgid "\t--free-space <space>\t\tTry to make space available."
 msgstr "\t--free-space <tila>\t\tYritä vapauttaa tilaa."
 
-msgid "\t--from\t\t\t\tCreate a snapshot from the specified snapshot."
+#, fuzzy
+msgid "\t--from <number>\t\t\tCreate a snapshot from the specified snapshot."
 msgstr "\t--from\t\t\t\tLuo tilannekuva määritetystä tilannekuvasta."
 
 msgid "\t--fstype, -f <fstype>\t\tManually set filesystem type."
@@ -102,6 +102,10 @@ msgstr "\t--machine-readable <format>\tAsttaa koneluettavan tulosmuodon (CSV, JS
 
 msgid "\t--no-dbus\t\t\tOperate without DBus."
 msgstr "\t--no-dbus\t\t\tToimi ilman DBusia."
+
+#, fuzzy
+msgid "\t--no-headers\t\t\tNo headers for CSV output format."
+msgstr "\t--csvout\t\t\tAsettaa CSV-tulosmuodon."
 
 msgid "\t--output, -o <file>\t\tSave status to file."
 msgstr "\t--output, -o <tiedosto>\t\tTallenna tilatieto tiedostoon."
