--- a/po/fr.po
+++ b/po/fr.po
@@ -3,11 +3,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-03-23 12:54+0100\n"
+"POT-Creation-Date: 2023-02-08 08:09+0100\n"
 "PO-Revision-Date: 2022-11-01 01:13+0000\n"
 "Last-Translator: Antoine Belvire <antoine.belvire@opensuse.org>\n"
-"Language-Team: French <https://l10n.opensuse.org/projects/snapper/master/fr/>"
-"\n"
+"Language-Team: French <https://l10n.opensuse.org/projects/snapper/master/fr/>\n"
 "Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -80,7 +79,8 @@ msgstr "\t--extensions, -x <options>\tOptions supplémentaires transmises à la 
 msgid "\t--free-space <space>\t\tTry to make space available."
 msgstr "\t--free-space <espace>\t\tEssaye de libérer de l'espace."
 
-msgid "\t--from\t\t\t\tCreate a snapshot from the specified snapshot."
+#, fuzzy
+msgid "\t--from <number>\t\t\tCreate a snapshot from the specified snapshot."
 msgstr "\t--from\t\t\t\tCrée un instantané à partir de l'instantané spécifié."
 
 msgid "\t--fstype, -f <fstype>\t\tManually set filesystem type."
@@ -104,6 +104,10 @@ msgstr "\t--machine-readable <format>\tDéfinit un format de sortie lisible par 
 
 msgid "\t--no-dbus\t\t\tOperate without DBus."
 msgstr "\t--no-dbus\t\t\tFonctionner sans DBus."
+
+#, fuzzy
+msgid "\t--no-headers\t\t\tNo headers for CSV output format."
+msgstr "\t--csvout\t\t\tDéfinit le format de sortie CSV."
 
 msgid "\t--output, -o <file>\t\tSave status to file."
 msgstr "\t--output, -o <fichier>\t\tSauvegarde les statuts vers le fichier."
