--- a/po/hi.po
+++ b/po/hi.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-03-23 12:54+0100\n"
+"POT-Creation-Date: 2023-02-08 08:09+0100\n"
 "PO-Revision-Date: 2018-04-07 16:03+0000\n"
 "Last-Translator: Anshul Panwar <caspian7pena@gmail.com>\n"
 "Language-Team: Hindi <https://l10n.opensuse.org/projects/snapper/master/hi/>\n"
@@ -68,7 +68,7 @@ msgstr ""
 msgid "\t--free-space <space>\t\tTry to make space available."
 msgstr ""
 
-msgid "\t--from\t\t\t\tCreate a snapshot from the specified snapshot."
+msgid "\t--from <number>\t\t\tCreate a snapshot from the specified snapshot."
 msgstr ""
 
 msgid "\t--fstype, -f <fstype>\t\tManually set filesystem type."
@@ -90,6 +90,9 @@ msgid "\t--machine-readable <format>\tSet a machine-readable output format (csv,
 msgstr ""
 
 msgid "\t--no-dbus\t\t\tOperate without DBus."
+msgstr ""
+
+msgid "\t--no-headers\t\t\tNo headers for CSV output format."
 msgstr ""
 
 msgid "\t--output, -o <file>\t\tSave status to file."
